[gd_scene load_steps=36 format=2]

[ext_resource path="res://Player/Clones/Effect/CloneEf-0002.png" type="Texture" id=1]
[ext_resource path="res://Boldness.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Player/Clones/ClonesScript.gd" type="Script" id=3]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0008.png" type="Texture" id=4]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0026.png" type="Texture" id=5]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0016.png" type="Texture" id=6]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0025.png" type="Texture" id=7]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0028.png" type="Texture" id=8]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0003.png" type="Texture" id=9]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0010.png" type="Texture" id=10]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0004.png" type="Texture" id=11]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0018.png" type="Texture" id=12]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0021.png" type="Texture" id=13]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0009.png" type="Texture" id=14]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0027.png" type="Texture" id=15]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0029.png" type="Texture" id=16]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0023.png" type="Texture" id=17]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0006.png" type="Texture" id=18]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0007.png" type="Texture" id=19]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0005.png" type="Texture" id=20]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0022.png" type="Texture" id=21]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0030.png" type="Texture" id=22]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0011.png" type="Texture" id=23]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0012.png" type="Texture" id=24]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0013.png" type="Texture" id=25]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0017.png" type="Texture" id=26]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0019.png" type="Texture" id=27]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0020.png" type="Texture" id=28]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0024.png" type="Texture" id=29]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0015.png" type="Texture" id=30]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0014.png" type="Texture" id=31]
[ext_resource path="res://Player/Clones/Effect/CloneEf-0001.png" type="Texture" id=32]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 32 ), ExtResource( 1 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 4 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 31 ), ExtResource( 30 ), ExtResource( 6 ), ExtResource( 26 ), ExtResource( 12 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 13 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 29 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 15 ), ExtResource( 8 ), ExtResource( 16 ), ExtResource( 22 ) ],
"loop": false,
"name": "Disappear",
"speed": 24.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 16 ), ExtResource( 8 ), ExtResource( 15 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 29 ), ExtResource( 17 ), ExtResource( 21 ), ExtResource( 13 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 12 ), ExtResource( 26 ), ExtResource( 6 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 4 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 11 ), ExtResource( 1 ), ExtResource( 9 ), ExtResource( 32 ) ],
"loop": false,
"name": "Appear",
"speed": 48.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.2625, 32.8906 )

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 1
outline_color = Color( 1, 0.560784, 0, 1 )
extra_spacing_bottom = -12
font_data = ExtResource( 2 )

[node name="Clones" type="KinematicBody2D" groups=[
"Ground",
]]
collision_layer = 513
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.339712, 0.345571 )
frames = SubResource( 1 )
animation = "Appear"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="TextTime" type="Label" parent="."]
margin_left = -17.1652
margin_top = -20.3867
margin_right = 16.8348
margin_bottom = 18.6133
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "7"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="DisappearEffect" type="Timer" parent="."]
wait_time = 1.2
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DisappearEffect" to="." method="_on_DisappearEffect_timeout"]
